--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: TransitFeeds
-description: Public bug tracker and wiki for TransitFeeds
+title: OpenMobilityData
+description: Public bug tracker and wiki for OpenMobilityData
 google_analytics: UA-44819122-2
 show_downloads: true
 theme: jekyll-theme-architect
