--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: OpenMobilityData
 description: Public bug tracker and wiki for OpenMobilityData
 google_analytics: UA-44819122-2
 show_downloads: true
-theme: jekyll-theme-tactile
+theme: jekyll-theme-architect
 
 gems:
   - jekyll-mentions
